@@ -21,6 +21,16 @@
 </tr>
 </table>
 <p>
+2010-03-16  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/delegate.c (GetPostscriptDelegateInfo): Add support for
+        invoking "gs-cmyk" and "gs-cmyka" entries in delegates.mgk when
+        ColorSeparationType or ColorSeparationMatteType is requested.
+        Requisite entries in delegates.mgk are left for the user to add.
+
+</UL>
+<p>
 2010-03-11  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
