@@ -1,3 +1,10 @@
+2010-03-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/delegate.c (GetPostscriptDelegateInfo): Add support for
+	invoking "gs-cmyk" and "gs-cmyka" entries in delegates.mgk when
+	ColorSeparationType or ColorSeparationMatteType is requested.
+	Requisite entries in delegates.mgk are left for the user to add.
+
 2010-03-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/magick.c (InitializeMagick): Don't initialize locale
